# cpp_projects

./: .gitignore  CMakeLists.txt  format_classes.cpp  format_classes.h  log_DEBUG.txt  log_ERROR.txt  log_INFO.txt  log_WARN.txt  logger  logger.cpp  logger.h  resFile.txt  resfile.txt  test.txt  utils.cpp  utils.h
include/: channel.h  file_channel.h  format_classes.h  logger.h  logger_data.h  socket_channel.h  utils.h
src/: channel.cpp  file_channel.cpp  format_classes.cpp  logger.cpp  logger_data.cpp  main.cpp  socket_channel.cpp
